--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
-@import url(https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css)
+@import url(https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css);
+
+.font_1 {
+    font-weight: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    color: green;
+}
+
+.font_2 {
+    font-weight: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(2, 47, 83);
+}
