--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,9 @@ input.checkbox{
     float: left;
     margin-top: 7px;
 }
+
+.divScroll {
+    overflow-y:scroll;
+    height:700px;
+    width:80%;
+}
